--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <title>projekt</title>
+        <title>projekt1</title>
         <meta charset="utf8">
     </head>
     <body>
