--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf8">
     </head>
     <body>
-        <h1>Odin recipes</h1>
+        <h1>Odin recipes 22222</h1>
         <ul>
         <li><a href="./recipes/lasagna.html">lasagna</a></li>
         <li><a href="./recipes/hotdog.html">hotdog</a></li>
